# knowledge-service

./: .env.example  .gitignore  API.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md
docs/superpowers/plans/: 2026-03-20-chunking-enhancement.md  2026-03-22-bm25-hybrid-search.md  2026-03-22-foundation-improvements.md  2026-03-22-ingestion-improvements.md  2026-03-23-multihop-retrieval.md  2026-03-23-query-routing.md  2026-03-24-community-global-search.md  2026-03-25-fix-duplicate-triples.md  2026-03-25-literal-object-handling.md  2026-03-26-async-content-ingestion.md  2026-03-29-federation-domains-community.md  2026-04-04-nlp-chunk-optimization.md  2026-04-15-processphase-2pc-outbox.md  2026-04-15-reader-status-filter.md
docs/superpowers/specs/: 2026-03-20-chunking-enhancement-design.md  2026-03-21-foundation-improvements-design.md  2026-03-22-bm25-hybrid-search-design.md  2026-03-22-ingestion-improvements-design.md  2026-03-23-multihop-retrieval-design.md  2026-03-23-query-routing-design.md  2026-03-24-community-global-search-design.md  2026-03-25-literal-object-handling-design.md  2026-03-26-async-content-ingestion-design.md  2026-03-29-federation-domains-community-design.md  2026-04-04-nlp-chunk-optimization-design.md  2026-04-15-processphase-2pc-outbox-design.md  2026-04-15-reader-status-filter-design.md
migrations/: 001_initial.sql  002_content_chunks.sql  003_predicate_embeddings.sql  004_add_chunk_provenance.sql  005_add_fts.sql  006_add_section_header.sql  007_communities.sql  008_ingestion_jobs.sql  009_federation_enriched.sql  010_unique_active_job.sql  011_theses.sql  012_entity_aliases.sql  013_chunks_skipped.sql  014_triple_outbox.sql  015_items_rejected.sql  016_drop_legacy_tables.sql  017_drop_dead_tables_and_columns.sql
scripts/: bulk_ingest.py  smoke_test.py
src/knowledge_service/: _utils.py  chunking.py  config.py  main.py  models.py
src/knowledge_service/admin/: __init__.py  auth.py  communities.py  jobs.py  routes.py  stats.py  theses.py
src/knowledge_service/api/: _ingest.py  ask.py  changes.py  claims.py  content.py  contradictions.py  health.py  knowledge.py  search.py  theses.py  upload.py
src/knowledge_service/clients/: base.py  classifier.py  federation.py  llm.py  prompt_builder.py  rag.py
src/knowledge_service/ingestion/: chunk_filter.py  coreference.py  federation.py  outbox.py  phases.py  pipeline.py  worker.py
src/knowledge_service/nlp/: __init__.py  bootstrap.py
src/knowledge_service/ontology/: bootstrap.py  namespaces.py  registry.py  schema.ttl  uri.py
src/knowledge_service/parsing/: __init__.py  (+5 more)
tests/: conftest.py  test_admin_auth.py  test_admin_chat.py  test_admin_communities.py  test_admin_routes.py  test_admin_stats.py  test_api_ask.py  test_api_changes.py  test_api_claims.py  test_api_content.py  test_api_contradictions.py  test_api_health.py  test_api_knowledge.py  test_api_search.py  test_api_theses.py  test_bootstrap.py  test_chunk_filter.py  test_chunking.py  test_classifier.py  test_community.py  test_community_trigger.py  test_config.py  test_content_store.py  test_coreference_phase.py  test_domain_ontology.py  test_domain_registry.py  test_embed_subbatch.py  test_embedding_client.py  test_embedding_store.py  test_entity_resolver.py  test_entity_store.py  test_extraction_client.py  test_federation_client.py  test_federation_phase.py  test_graph_traversal.py  test_html_parser.py  test_hybrid_search.py  test_inference_engine.py  test_ingest.py  test_ingestion_crash_injection.py  (+30 more)
tests/e2e/: conftest.py  helpers.py  test_e2e_full_roundtrip.py  test_e2e_html_ingestion.py  test_e2e_pdf_ingestion.py  test_e2e_reader_status_filter.py  test_e2e_structured_ingestion.py
tests/fixtures/: sample.csv  sample.html
(+38 files in other folders)
